--- a/contrib/debian/manpages/RatCoin.conf.5
+++ b/contrib/debian/manpages/RatCoin.conf.5
@@ -1,14 +1,14 @@
-.TH RatCoin3.2.CONF "8" "April 2013" "RatCoin3.2.conf 3.19"
+.TH RatCoin3.2.1.conf "8" "April 2013" "RatCoin3.2.1.conf 3.19"
 .SH NAME
-RatCoin3.2.conf \- RatCoin3.2 configuration file
+RatCoin3.2.1.conf \- RatCoin3.2 configuration file
 .SH SYNOPSIS
 All command-line options (except for '-datadir' and '-conf') may be specified in a configuration file, and all configuration file options may also be specified on the command line. Command-line options override values set in the configuration file.
 .TP
 The configuration file is a list of 'setting=value' pairs, one per line, with optional comments starting with the '#' character.
 .TP
-The configuration file is not automatically created; you can create it using your favorite plain-text editor. By default, RatCoin3.2d(1) will look for a file named RatCoin3.2.conf(5) in the RatCoin3.2 data directory, but both the data directory and the configuration file path may be changed using the '-datadir' and '-conf' command-line arguments.
+The configuration file is not automatically created; you can create it using your favorite plain-text editor. By default, RatCoin3.2d(1) will look for a file named RatCoin3.2.1.conf(5) in the RatCoin3.2 data directory, but both the data directory and the configuration file path may be changed using the '-datadir' and '-conf' command-line arguments.
 .SH LOCATION
-RatCoin3.2.conf should be located in $HOME/.RatCoin3.2
+RatCoin3.2.1.conf should be located in $HOME/.RatCoin3.2
 .SH NETWORK-RELATED SETTINGS
 .TP
 .TP
